Changed Resume. Fixed center alignment on homepage

--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,17 @@
     box-sizing: border-box;
   }
 
+html, body {
+    height: 100%;
+    width: 100%
+}
 
 .container {
     display: flex;
     font-family: 'Montserrat', sans-serif;
     color: #564a4a;
+    height: 100%;
+    width: 100%;
 }
 
 .left {
